Added javascript files

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -3,14 +3,18 @@ extends layout
 block content
   h1= title
   p Welcome to #{subtitle}
-
   form(action="/", method="POST")
     input(name="lead_email" type="email", placeholder="Your email here for more recipes")
     button(type="submit") Send me recipes
-    if leads
-      h1 Leads
-        for lead in leads
-          p
-            span #{lead.email}
-            |
-            a(href="/lead/" + lead.id) Details
+    
+  if leads
+    h1 Leads
+    for lead in leads
+      p(id=lead.id)
+        span #{lead.email}
+        |
+        a(href="/lead/" + lead.id) Details
+        |
+        button(onclick=`deleteLead('${lead.id}')`) Delete
+  script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+  script(src='/javascripts/leads.js')
