--- a/views/lead.pug
+++ b/views/lead.pug
@@ -1,10 +1,17 @@
-extends layout
+doctype html
+html(lang="en")
 
-block content
-  h1 Lead
-  p 
-    span #{lead.email}
-    a(href="/lead/" + lead.id + "/edit") Edit
-    |
-    form(action="/lead/" + lead.id + "/delete", method="POST")
-      button(type="submmit") Delete
+include common/header.pug
+  +head("MVP")
+
+  body
+    h1 Lead
+    p 
+      span #{lead.email}
+      a(href="/lead/" + lead.id + "/edit") Edit
+      |
+      form(action="/lead/" + lead.id + "/delete", method="POST")
+        button(type="submmit") Delete
+    
+    include common/footer.pug
+    +footer()
