--- a/views/lead.pug
+++ b/views/lead.pug
@@ -1,17 +1,31 @@
 doctype html
 html(lang="en")
 
-include common/header.pug
+  include common/header.pug
   +head("MVP")
 
-  body
-    h1 Lead
-    p 
-      span #{lead.email}
-      a(href="/lead/" + lead.id + "/edit") Edit
-      |
-      form(action="/lead/" + lead.id + "/delete", method="POST")
-        button(type="submmit") Delete
+  body    
+    header
+      include common/navbar.pug
+      +navbar()
+      
+      .container
+        .row  
+          .col-md-12
+            h1 Lead
+
+            table.table
+              thead.thead.dark
+                tr
+                  th(scope='col') Email
+                  th(scope='col') Actions          
+              tbody
+                tr
+                  td #{lead.email}
+                  td
+                    a(href="/lead/" + lead.id + "/edit")(style='margin-right:.5rem;') Edit
+                    form(action="/lead/" + lead.id + "/delete", method="POST")(style="display:inline-block;")
+                      button.btn.btn-danger(type="submmit") Delete            
     
-    include common/footer.pug
-    +footer()
+      include common/footer.pug
+      +footer()
